--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,16 @@
   <title>Frontend</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--Inter UI font-->
+  <link href="https://rsms.me/inter/inter-ui.css" rel="stylesheet">
+
+  <!--vendors styles-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
+
+  <!-- Bootstrap CSS / Color Scheme -->
+  <link rel="stylesheet" href="assets/css/default.css" id="theme-color">
 </head>
 <body>
   <app-root></app-root>
