--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -26,10 +26,13 @@
         <!-- Bootstrap CSS / Color Scheme -->
         <link rel="stylesheet" href="assets/css/default.css" id="theme-color">
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     </head>
 
-    <body>
+    <body class="mat-typography">
         <app-root>
         </app-root>
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
