--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -44,15 +44,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
         <app-root></app-root>
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.7.3/feather.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
         <script src="assets/js/scripts.js"></script>
         <!-- Bootstrap core JavaScript-->
-        <script src="assets/vendor/jquery/jquery.min.js"></script>
-        <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!--        <script src="assets/vendor/jquery/jquery.min.js"></script>-->
+<!--        <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>-->
 
         <!-- Core plugin JavaScript-->
         <script src="assets/vendor/jquery-easing/jquery.easing.min.js"></script>
