--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,6 +1,7 @@
+<script src="https://js.stripe.com/v3/"></script>
 <!doctype html>
 <html lang="en">
-<head>
+<head js.stripe.com>
     <meta charset="utf-8">
     <title>Frontend</title>
     <base href="/">
@@ -61,6 +62,11 @@
 
         <!-- Page level custom scripts -->
         <script src="assets/js/demo/datatables-demo.js"></script>
+        <script src="https://js.stripe.com/"></script>
+        <script type="text/javascript">
+          const stripe   = Stripe('use your test publishable key');
+          const elements = stripe.elements();
+        </script>
 
     </body>
 
